LinkRoll: Fix underline gaps, display empty char
Display empty (= space) char with -1px so that underline works like it should

--- a/components/LinkRoll/LinkRoll.scss
+++ b/components/LinkRoll/LinkRoll.scss
@@ -30,10 +30,6 @@
 .LinkRoll-char {
   display: inline-block;
   position: relative;
-
-  &.-empty {
-    visibility: hidden;
-  }
 }
 
 /* =======================================
@@ -45,10 +41,9 @@
   &.has-underline {
     .LinkRoll-char {
       &:after {
-        border-bottom-style: solid;
-        border-bottom-width: var(--border-width);
+        border-bottom: var(--border-width) solid;
         content: '';
-        inset: auto 0 rem($space-4xs) 0;
+        inset: auto -1px rem($space-4xs) 0;
         opacity: 0;
         position: absolute;
         transition: opacity var(--trans-primary);
